<resources>
    <string name="app_name">পালাও করোনা</string>
    <string name="app_name_top_bar">পালাও করোনা !</string>
    <string name="feature_01_about_corona">About COVID-19</string>
    <string name="feature_02_test">Virus Test</string>
    <string name="feature_03_news">Recent News</string>
    <string name="feature_04_dos">DOs &amp; DON\'Ts</string>
    <string name="feature_05_quarantine">Quarantine</string>
    <string name="feature_06_faq">FAQ</string>
    <string name="feature_07_live_updates">Live Updates</string>
    <string name="feature_08_emergency">Emergency &amp; Others</string>
    <string name="okay">Okay</string>
    <string name="lang">বাংলা</string>
    <string name="next">Next</string>
    <string name="enter_your_phone_number">Your Phone Number Please?</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number to receive a verification code and proceed with the test</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="verify">Verify</string>
    <string name="name">Name</string>
    <string name="personal_phone_optional">Home Phone Number (Optional)</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="pref_name" translatable="false">corona_pref</string>
    <string name="start_taking_test">Start Taking Test</string>
    <string name="faq_q_1">What are the initial symptoms of COVID-19?</string>
    <string name="faq_q_2">When should you consult a doctor?</string>
    <string name="faq_q_3">What are the emergency signs of COVID-19?</string>
    <string name="faq_q_4">Is COVID-19 contagious?</string>
    <string name="faq_q_5">What is Quarantine?</string>
    <string name="faq_q_6">Should I wear a mask?</string>
    <string name="faq_q_7">Should I use soaps, hand-sanitizers or hand wash?</string>
    <string name="faq_a_1">Symptoms for COVID-19 may appear from 2-14 days after exposure which conclude:\n
                            · Fever\n
                            · Cough\n
                            · Shortness of breath or difficulty in breathing\n
                            · Tiredness\n
                            · Aches\n
                            · Runny nose\n
                            · Sore throat
    </string>
    <string name="faq_a_2">If you have a travel history in the affected places or you are having those symptoms, you should immediately seek help from a professional.</string>
    <string name="faq_a_3">If you are already a Coronavirus disease patient and you are not taking proper medical help, you may go into a critical condition with these signs:
                            · Bluish face or eyes\n
                            · Breathing difficulty\n
                            · Chest pain
    </string>
    <string name="faq_a_4">Yes, it is. The Coronavirus spread from person to person. This is why it is strictly prohibited to make physical contact with the affected patient.</string>
    <string name="faq_a_5">Quarantine is a period of isolation. If you have initial symptoms of this virus you should keep yourself away from any kind of social gathering to find out if you are actually affected or not.</string>
    <string name="faq_a_6">If you have symptoms of the illness or you are treating the patients with COVID-19, you should wear a mask.</string>
    <string name="faq_a_7">You can use either soaps or hand wash. Wash your hands for 20 seconds. If you do not have any of these, you should rub your hand with hand-sanitizer that has 60% alcohol in it.</string>
    <string name="text_confirmed">Confirmed Cases</string>
    <string name="text_recovered">Recovered</string>
    <string name="text_deaths">Deaths</string>
    <string name="text_active_cases">Active Cases</string>
    <string name="text_quarantined">Quarantined</string>
    <string name="text_released">Released</string>
    <string name="text_total_isolation_completeds">Total Isolation Completed</string>
    <string name="text_isolated">Isolated</string>
    <string name="text_cases_source">
        <a href="https://coronavirus.jhu.edu/map.html">
            Source: CSSE JHU
        </a>
    </string>
    <string name="text_live_update_source">
        <a href="https://www.prothomalo.com/live">
            Source: Prothom Alo
        </a>
    </string>
    <string name="text_cases_source_DGHS">
        <a href="https://www.dghs.gov.bd/index.php/bd/">
            Source: DGHS
        </a>
    </string>
    <string name="last_updated">Last Updated:</string>
    <string name="phone_number_invalid">Invalid Phone Number. Please enter a valid phone number.</string>
    <string name="invalid_otp">Invalid OTP. Please enter the 6 digits OTP.</string>
    <string name="previous">Previous</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="form_not_completed">Please give answer of all questions</string>
    <string name="give_otp_code">Please check your phone and give your verification code below</string>
    <string name="double_press_to_exit">Press again to exit</string>
    <string name="no_internet_connection" translatable="false">No Internet Connection</string>
    <string name="no_internet_connection_message" translatable="false">I don\'t need stable relationship. What I need is a stable internet connection.</string>
    <string name="retry" translatable="false">Retry</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="test_positive">You are at minimum risk. You should follow instructions mentioned bellow:\n\n• Avoid public gathering\n• Avoid all unnecessary travel\n•Avoid touching your face\n•Practice respiratory hygiene\n• Keep yourself at least 6ft away from other people\n• Follow the preventive measures to stop the spread</string>
    <string name="test_medium">You are ate average risk. You should follow instructions mentioned bellow:\n\n• Stay home\n• Avoid public gathering\n• Stock up on food, supplies, and medication\n• Keep yourself away from people &amp; pets\n• Frequently clean and disinfect your hands and living area\n• Regularly monitor yourself for any symptoms\n• Contact someone who will check in on you and help you if you get sick</string>
    <string name="test_negative">You are ate high risk. You should follow instructions mentioned bellow:\n\n• Contact IEDCR Bangladesh by phone if you are showing symptoms\n• Stay home\n• Prepare to be in quarantine for 2 to 4 weeks\n• Prepare a separate room for stay\n• Keep yourself away from people &amp; pets\n• Avoid sharing personal household items\n• Cover your coughs and sneezes or wear a facemask\n• Keep an eye on your health\n• Call a doctor if symptoms worsen\n• If you need to get medical care, avoid all public transportation\n• Ask someone to bring you food and supplies</string>
    <string name="go_to_dashboard">Go to dashboard</string>
    <string name="call">Call</string>
    <string name="about_covid_part_01">COVID 19, a viral infection disease that has recently been declared as pandemic by World Health Organization ( WHO ). This disease is the newly discovered Specie of CoronaVirus and as of now the scientists couldn’t invent the vaccine to cure. The spread occurs of this Flu virus through the respiratory droplet (cough and sneeze of people) and gradually the Respiratory system of infected people get damaged when it’s severe level and the patient suffer from breathing difficulty. And when the infected persons have a mild situation they experience cough, Fever, sore throat and runny nose as its symptoms. </string>
    <string name="about_covid_part_02">Let’s try to understand how this idea of social distancing can flatten the infected curve with a simple simulation. Let\'s think there are 200 people in a city and one of them gets infected by COVID-19. All of them are moving around the city freely and thus affecting those who are around them in the process. These infected people are spreading the virus too. But if we can isolate 50 infected people, they lose the ability to get others infected. Thus the rate decreases and everyone gets disinfected as time goes by.</string>
    <string name="text_about_covid_source">
        <a href="https://www.washingtonpost.com/graphics/2020/health/corona-simulation-bengali/">
            Source: Washington Post
        </a>
    </string>
    <string name="update">Update</string>
    <string name="updae_available_message">An update of tis app is available. Please update the app.</string>
    <string name="update_available">Updatet Available</string>
    <string name="exit">Update later</string>
    <string name="please_enter_your_name">Plase enter your name</string>
    <string name="please_enter_your_age">Plase enter your age</string>
    <string name="please_select_your_gender">Please select your gender</string>
    <string-array name="emergency_contact_name">
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
        <item>IEDCR (Institute of Epidemiology, Disease Control and Research)</item>
    </string-array>
    <string-array name="whole_day_contact_name">
        <item>24 Hours Service</item>
        <item>Dr. Rehan Akhter</item>
        <item>Dr.Nazir Shah</item>
        <item>Dr.Niloy Prosad</item>
        <item>Md. Asaduzzaman Shuvo</item>
        <item>Dr. Mahbubur Rahman Rajib</item>
        <item>Dr.Mohona Khondoker</item>
        <item>Dr. Saifa Islam</item>
        <item>Dr. Atiya Rahman</item>
        <item>Dr. Priyanka Mondal</item>
        <item>Dr. Sharmin haque prima</item>
        <item>Dr. Shadman Sakib</item>
        <item>Olia Mahjabin</item>
        <item>Dr.Tanvir Rahman</item>
        <item>Dr. Sadia Afrin</item>
    </string-array>
    <string-array name="other_contact_name">
        <item>8:00AM to 12:00AM Service</item>
        <item>Dr. Zaara Rahman</item>
        <item>Nawrin Jahan</item>
        <item>Dr.Farjana yeasmin</item>
        <item>Dr. Refat parvez amy</item>
        <item>Dr. Nusrat Nueri Raisa</item>
        <item>Dr. Subhashree monigram</item>
        <item>Dr. Nigar sultana</item>
        <item>Dr. Nafisa Rahman</item>
        <item>Rasma Muzaffar</item>
        <item>Dr hima</item>
        <item>Dr. Mahbub Alam</item>
        <item>Dr. Farjana</item>
    </string-array>
</resources>