<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bg_mobile_verification" />

            <xyz.palaocorona.base.ui.AppTextView
                android:id="@+id/tvYourPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_phone_number"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@color/black"
                android:layout_below="@id/ivLogin"
                android:layout_centerHorizontal="true"
                android:textStyle="bold" />

            <xyz.palaocorona.base.ui.AppTextView
                android:id="@+id/tvMessage"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/please_enter_your_mobile_number"
                android:gravity="center"
                android:layout_below="@id/tvYourPhoneNumber"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvMessage"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:hint="@string/mobile_number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPhoneNumber"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:maxLength="11"
                        android:maxLines="1"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_below="@id/tilPhoneNumber"
                android:text="@string/login" />

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>