<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCreateProfile"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_180sdp"
            android:layout_margin="@dimen/_8sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bg_welcome_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilName"
            android:layout_below="@id/ivCreateProfile"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/tilAge"
            app:layout_constraintVertical_chainStyle="packed"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/etName"
                android:lines="1"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilAge"
            android:layout_below="@id/tilName"
            app:layout_constraintTop_toBottomOf="@id/tilName"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/tilGender"
            android:hint="@string/age">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/etAge"
                android:lines="1"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilGender"
            android:layout_below="@id/tilAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:layout_constraintTop_toBottomOf="@id/tilAge"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@id/tilPersonalPhone"
            android:hint="@string/gender">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/etGender"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:clickable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tilPersonalPhone"
            android:layout_below="@id/tilGender"
            app:layout_constraintTop_toBottomOf="@id/tilGender"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/personal_phone_optional"
            app:layout_constraintBottom_toTopOf="@id/btnCreateProfile">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:id="@+id/etPhoneNumber"
                android:lines="1"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCreateProfile"
            android:layout_below="@id/tilPersonalPhone"
            android:text="@string/start_taking_test"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/tilPersonalPhone"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </RelativeLayout>

</androidx.core.widget.NestedScrollView>