<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <ninja.saad.palaocorona.base.ui.AppTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feature_01_about_corona"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/grey_900"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@color/grey_900" />

                <ninja.saad.palaocorona.base.ui.AppTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:lineSpacingExtra="@dimen/_10sdp"
                    android:text="@string/about_covid_part_01"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/grey_700" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="true"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="false">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivAboutCovid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </com.google.android.material.card.MaterialCardView>

                <ninja.saad.palaocorona.base.ui.AppTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:maxLines="1"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                    android:textColor="@color/grey_900" />

                <ninja.saad.palaocorona.base.ui.AppTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:lineSpacingExtra="@dimen/_10sdp"
                    android:text="@string/about_covid_part_02"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_700"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_15sdp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>